removed some unnecessary words

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-git <html lang="en">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -13,7 +13,7 @@ git <html lang="en">
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #7165db;
+      background: #6b60ca;
       font-family: 'Poppins', sans-serif;
       color: #333;
     }
