added new pages and made changes to some pages

--- a/dashboard.html
+++ b/dashboard.html
@@ -12,6 +12,11 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+  <!-- Hamburger Button (visible only on small screens) -->
+<div class="hamburger">
+  <i class="fas fa-bars"></i>
+</div>
+
   <div class="sidebar">
     <div class="logo">MWF</div>
   
@@ -19,8 +24,11 @@
   <li data-roles="manager"><a href="dashboard.html" class="active"> <i class="fa-solid fa-gauge-high"></i><span>Dashboard</span> </a></li>
   <li data-roles="manager sales"><a href="product.html"> <i class="fas fa-box"></i><span>Products</span> </a></li>
   <li data-roles="manager sales"><a href="sales.html"> <i class="fas fa-dollar-sign"></i><span>Sales</span> </a></li>
+        <li data-roles="manager sales"><a href="raw-materials.html"> <i class="fas fa-cubes"></i><span>Raw Materials</span> </a></li>
   <li data-roles="manager sales"><a href="suppliers.html"> <i class="fas fa-truck"></i><span>Suppliers</span> </a></li>
   <li data-roles="manager sales delivery"><a href="delivery.html"> <i class="fas fa-route"></i><span>Delivery</span> </a></li>
+      <li data-roles="manager"><a href="todo.html"><i class="fas fa-list"></i><span>To-Do</span></a></li>
+
   <li data-roles="manager"><a href="reports.html"> <i class="fas fa-file-alt"></i><span>Reports</span> </a></li>
   <li data-roles="manager"><a href="employees.html"> <i class="fas fa-user"></i><span>Employees</span> </a></li>
 
