--- a/suppliers.html
+++ b/suppliers.html
@@ -13,17 +13,20 @@
 <body>
   <div class="sidebar">
     <div class="logo">MWF</div>
-     <ul class="menu">
-  <li data-roles="manager"><a href="dashboard.html" > <i class="fa-solid fa-gauge-high"></i><span>Dashboard</span> </a></li>
-  <li data-roles="manager sales"><a href="product.html"> <i class="fas fa-box"></i><span>Products</span> </a></li>
-  <li data-roles="manager sales"><a href="sales.html"> <i class="fas fa-dollar-sign"></i><span>Sales</span> </a></li>
-  <li data-roles="manager sales"><a href="suppliers.html" class="active"> <i class="fas fa-truck"></i><span>Suppliers</span> </a></li>
-  <li data-roles="manager sales delivery"><a href="delivery.html"> <i class="fas fa-route"></i><span>Delivery</span> </a></li>
-  <li data-roles="manager"><a href="reports.html"> <i class="fas fa-file-alt"></i><span>Reports</span> </a></li>
-  <li data-roles="manager"><a href="employees.html"> <i class="fas fa-user"></i><span>Employees</span> </a></li>
+    <ul class="menu">
+      <li data-roles="manager"><a href="dashboard.html"><i class="fa-solid fa-gauge-high"></i><span>Dashboard</span></a></li>
+      <li data-roles="manager sales"><a href="product.html"><i class="fas fa-box"></i><span>Products</span></a></li>
+      <li data-roles="manager sales"><a href="sales.html"><i class="fas fa-dollar-sign"></i><span>Sales</span></a></li>
+            <li data-roles="manager sales"><a href="raw-materials.html"> <i class="fas fa-cubes"></i><span>Raw Materials</span> </a></li>
 
-  <li class="logout"><a href="log-out.html"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a></li>
-</ul>
+      <li data-roles="manager sales"><a href="suppliers.html" class="active"><i class="fas fa-truck"></i><span>Suppliers</span></a></li>
+      <li data-roles="manager sales delivery"><a href="delivery.html"><i class="fas fa-route"></i><span>Delivery</span></a></li>
+            <li data-roles="manager"><a href="todo.html"><i class="fas fa-list"></i><span>To-Do</span></a></li>
+
+      <li data-roles="manager"><a href="reports.html"><i class="fas fa-file-alt"></i><span>Reports</span></a></li>
+      <li data-roles="manager"><a href="employees.html"><i class="fas fa-user"></i><span>Employees</span></a></li>
+      <li class="logout"><a href="log-out.html"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a></li>
+    </ul>
   </div>
 
   <main class="main-content">
@@ -43,7 +46,7 @@
 
     <section class="form-section">
       <h3>Add / Update Supplier</h3>
-      <form id="supplierForm">
+      <form id="supplierForm" autocomplete="off">
         <label>Supplier Name:
           <input type="text" id="supplierName" required />
         </label>
@@ -59,7 +62,13 @@
         <label>Address:
           <textarea id="address" rows="3" required></textarea>
         </label>
-        <button type="submit">Save Supplier</button>
+        <label>Product Supplied:
+          <input type="text" id="productSupplied" required />
+        </label>
+        <div style="margin-top:1rem;">
+          <button type="submit">Save Supplier</button>
+          <button type="button" id="cancelBtn" class="cancel-btn">Cancel</button>
+        </div>
       </form>
     </section>
 
@@ -73,10 +82,27 @@
             <th>Phone</th>
             <th>Email</th>
             <th>Address</th>
+            <th>Product Supplied</th>
             <th>Actions</th>
           </tr>
         </thead>
         <tbody></tbody>
+      </table>
+    </section>
+
+    <section class="summary-section">
+      <h3>Suppliers Summary</h3>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Total Number of Suppliers</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td id="totalSuppliers">0</td>
+          </tr>
+        </tbody>
       </table>
     </section>
   </main>
